--- a/Rule.conf
+++ b/Rule.conf
@@ -3,6 +3,8 @@ USER-AGENT,*com.apple.mobileme.fmip1,Apple
 USER-AGENT,*WeatherFoundation*,Apple
 USER-AGENT,%E5%9C%B0%E5%9B%BE*,Apple
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,Apple
+USER-AGENT,AppStore*,Apple
+USER-AGENT,com.apple.appstored*,Apple
 USER-AGENT,com.apple.geod*,Apple
 USER-AGENT,com.apple.Maps,Apple
 USER-AGENT,FindMyFriends*,Apple
@@ -13,25 +15,15 @@ USER-AGENT,fmflocatord*,Apple
 USER-AGENT,geod*,Apple
 USER-AGENT,locationd*,Apple
 USER-AGENT,Maps*,Apple
-DOMAIN,api.smoot.apple.com,Apple
-DOMAIN,captive.apple.com,Apple
-DOMAIN,configuration.apple.com,Apple
-DOMAIN,guzzoni.apple.com,Apple
-DOMAIN,smp-device-content.apple.com,Apple
-DOMAIN,xp.apple.com,Apple
-DOMAIN-SUFFIX,ess.apple.com,Apple
-DOMAIN-SUFFIX,push-apple.com.akadns.net,Apple
-DOMAIN-SUFFIX,push.apple.com,Apple
-DOMAIN,aod.itunes.apple.com,Apple
-DOMAIN,mesu.apple.com,Apple
+USER-AGENT,TestFlight*,Apple
+DOMAIN-SUFFIX,apple.com,Apple
+DOMAIN-SUFFIX,icloud.com,Apple
+DOMAIN-SUFFIX,itunes.com,Apple
+DOMAIN-SUFFIX,me.com,Apple
+DOMAIN-SUFFIX,mzstatic.com,Apple
 DOMAIN,api.smoot.apple.cn,Apple
-DOMAIN,gs-loc.apple.com,Apple
-DOMAIN,mvod.itunes.apple.com,Apple
-DOMAIN,streamingaudio.itunes.apple.com,Apple
-DOMAIN-SUFFIX,lcdn-locator.apple.com,Apple
-DOMAIN-SUFFIX,lcdn-registration.apple.com,Apple
-DOMAIN-SUFFIX,ls.apple.com,Apple
 PROCESS-NAME,trustd,Apple
+,Apple
 
 
 # Ads in Video apps
@@ -1389,7 +1381,6 @@ DOMAIN-SUFFIX,adytx.com,AdBlock
 DOMAIN-SUFFIX,adyun.com,AdBlock
 DOMAIN-SUFFIX,adz.zwee.ly,AdBlock
 DOMAIN-SUFFIX,adzerk.net,AdBlock
-DOMAIN-SUFFIX,ae.bdstatic.com,AdBlock
 DOMAIN-SUFFIX,aec.shjk123.net,AdBlock
 DOMAIN-SUFFIX,aecpm.alicdn.com,AdBlock
 DOMAIN-SUFFIX,ae-gb.mgid.com,AdBlock
@@ -8470,6 +8461,10 @@ IP-CIDR,119.176.0.0/12,China_media,no-resolve
 // letv
 DOMAIN-SUFFIX,api.mob.app.letv.com,China_media
 
+// MOO
+USER-AGENT,MOO*,China_media
+USER-AGENT,TencentMidasConnect*,China_media
+
 // NeteaseMusic
 USER-AGENT,%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90*,China_media
 USER-AGENT,NeteaseMusic*,China_media
@@ -8579,6 +8574,9 @@ DOMAIN-SUFFIX,nflximg.net,Global_media
 DOMAIN-SUFFIX,nflxso.net,Global_media
 DOMAIN-SUFFIX,nflxvideo.net,Global_media
 
+// Pandora
+DOMAIN-SUFFIX,pandora.com,Global_media
+
 // SoundCloud
 USER-AGENT,SoundCloud*,Global_media
 
@@ -8596,6 +8594,7 @@ DOMAIN-KEYWORD,youtube,Global_media
 DOMAIN-SUFFIX,googlevideo.com,Global_media
 DOMAIN-SUFFIX,gvt2.com,Global_media
 DOMAIN-SUFFIX,youtu.be,Global_media
+,Global_media
 
 
 // Client
@@ -8960,7 +8959,6 @@ DOMAIN-SUFFIX,osxdaily.com,Proxy
 DOMAIN-SUFFIX,ow.ly,Proxy
 DOMAIN-SUFFIX,paddle.com,Proxy
 DOMAIN-SUFFIX,paddleapi.com,Proxy
-DOMAIN-SUFFIX,pandora.com,Proxy
 DOMAIN-SUFFIX,panoramio.com,Proxy
 DOMAIN-SUFFIX,parallels.com,Proxy
 DOMAIN-SUFFIX,parse.com,Proxy
@@ -9379,6 +9377,7 @@ IP-CIDR,91.108.56.0/23,Proxy,no-resolve
 IP-CIDR6,2001:67c:4e8::/48,Proxy,no-resolve
 IP-CIDR6,2001:b28:f23d::/48,Proxy,no-resolve
 IP-CIDR6,2001:b28:f23f::/48,Proxy,no-resolve
+,Proxy
 
 
 // Client
