--- a/Rule.conf
+++ b/Rule.conf
@@ -23,7 +23,6 @@ DOMAIN-SUFFIX,me.com,Apple
 DOMAIN-SUFFIX,mzstatic.com,Apple
 DOMAIN,api.smoot.apple.cn,Apple
 PROCESS-NAME,trustd,Apple
-,Apple
 
 
 # Ads in Video apps
@@ -8491,8 +8490,10 @@ DOMAIN-SUFFIX,akamaized.net,Global_media
 DOMAIN-SUFFIX,ameba.jp,Global_media
 DOMAIN-SUFFIX,hayabusa.io,Global_media
 
-// Amazon
+// Amazon Prime Video
+USER-AGENT,Prime%20Video*,Global_media
 DOMAIN-SUFFIX,amazonaws.com,Global_media
+DOMAIN-SUFFIX,amazonvideo.com,Global_media
 
 // Bahamut
 USER-AGENT,Anime*,Global_media
@@ -8590,6 +8591,8 @@ DOMAIN-SUFFIX,spoti.fi,Global_media
 DOMAIN-SUFFIX,viu.tv,Global_media
 
 // Youtube
+USER-AGENT,*youtube*,Global_media
+USER-AGENT,YouTube*,Global_media
 DOMAIN-KEYWORD,youtube,Global_media
 DOMAIN-SUFFIX,googlevideo.com,Global_media
 DOMAIN-SUFFIX,gvt2.com,Global_media
