--- a/Rule.conf
+++ b/Rule.conf
@@ -305,7 +305,6 @@ DOMAIN-KEYWORD,allyes,AdBlock
 DOMAIN-KEYWORD,analysis,AdBlock
 DOMAIN-KEYWORD,analysys,AdBlock
 DOMAIN-KEYWORD,applovin,AdBlock
-DOMAIN-KEYWORD,cnzz,AdBlock
 DOMAIN-KEYWORD,dnserror,AdBlock
 DOMAIN-KEYWORD,domob,AdBlock
 DOMAIN-KEYWORD,duomeng,AdBlock
@@ -2397,6 +2396,8 @@ DOMAIN-SUFFIX,cmsapi.wifi8.com,AdBlock
 DOMAIN-SUFFIX,cmshow.gtimg.cn,AdBlock
 DOMAIN-SUFFIX,cmslayue.com,AdBlock
 DOMAIN-SUFFIX,cmx.autohome.com.cn,AdBlock
+DOMAIN-SUFFIX,cnzz.cn,AdBlock
+DOMAIN-SUFFIX,cnzz.com,AdBlock
 DOMAIN-SUFFIX,cn.pub.vpon.com,AdBlock
 DOMAIN-SUFFIX,cn.tatami-solutions.com,AdBlock
 DOMAIN-SUFFIX,cnbole.net,AdBlock
@@ -8913,6 +8914,7 @@ DOMAIN-SUFFIX,manhuaren.com,Proxy
 DOMAIN-SUFFIX,marketwatch.com,Proxy
 DOMAIN-SUFFIX,mashable.com,Proxy
 DOMAIN-SUFFIX,mathjax.org,Proxy
+DOMAIN-SUFFIX,maven.org,Proxy
 DOMAIN-SUFFIX,medium.com,Proxy
 DOMAIN-SUFFIX,mega.co.nz,Proxy
 DOMAIN-SUFFIX,mega.nz,Proxy
@@ -9538,11 +9540,9 @@ DOMAIN-SUFFIX,lucifr.com,Domestic
 DOMAIN-SUFFIX,luoo.net,Domestic
 DOMAIN-SUFFIX,lxdns.com,Domestic
 DOMAIN-SUFFIX,mai.tn,Domestic
-DOMAIN-SUFFIX,maven.org,Domestic
 DOMAIN-SUFFIX,meizu.com,Domestic
 DOMAIN-SUFFIX,mi.com,Domestic
 DOMAIN-SUFFIX,miaopai.com,Domestic
-DOMAIN-SUFFIX,microsoft.com,Domestic
 DOMAIN-SUFFIX,miui.com,Domestic
 DOMAIN-SUFFIX,miwifi.com,Domestic
 DOMAIN-SUFFIX,mob.com,Domestic
