--- a/Rule.conf
+++ b/Rule.conf
@@ -9669,5 +9669,13 @@ URL-REGEX,(ed2k|torrent|\.torrent|peer_id=|announce|info_hash|get_peers|find_nod
 IP-CIDR,1.255.62.0/24,Domestic,no-resolve
 
 
+
+DOMAIN-SUFFIX,local,DIRECT
+IP-CIDR,10.0.0.0/8,DIRECT
+IP-CIDR,100.64.0.0/10,DIRECT
+IP-CIDR,127.0.0.0/8,DIRECT
+IP-CIDR,172.16.0.0/12,DIRECT
+IP-CIDR,192.168.0.0/16,DIRECT
+
 GEOIP,CN,Domestic
 FINAL,Others,dns-failed
