--- a/NewRule.conf
+++ b/NewRule.conf
@@ -1,5 +1,14 @@
 [Rule]
 
+USER-AGENT,AppStore*,Apple
+USER-AGENT,com.apple.appstored*,Apple
+USER-AGENT,TestFlight*,Apple
+DOMAIN-SUFFIX,apple.com,Apple
+DOMAIN-SUFFIX,icloud.com,Apple
+DOMAIN-SUFFIX,itunes.com,Apple
+DOMAIN-SUFFIX,me.com,Apple
+DOMAIN-SUFFIX,mzstatic.com,Apple
+
 # Rulesets
 RULE-SET,SYSTEM,Apple
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/reject.list,AdBlock
